tests/files/flow_controller_tests/should_run/017.cmdr
//Test modulo with ints
x = 100 % 2;
print x;
x %= 9;
print x;
x = x % 2;
print x;
