tests/files/flow_controller_tests/should_fail/003.cmdr
//Should fail on modulo by 0
x = 1 % 0;